--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="heading"><h1> Furqan Calculator barbar nhi bana</h1></div>
+    <div class="heading"><h1> Calculator </h1></div>
     <div class="calculator">
         <input type="text" id="result" readonly>
         <div class="buttons">
