--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                         <div class="col-xl-9 col-lg-10 mx-auto">
                             <div class="bg-faded rounded p-5">
                                 <h2 class="section-heading mb-4">
-                                    <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
+                                    <span class="section-heading-upper">dsfhdsfjsdfjkds</span>
                                     <span class="section-heading-lower">About Our Cafe</span>
                                 </h2>
                                 <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
