--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <body>
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">SAifuddin ne chori karlia
-                    
-                </span>
+                <span class="site-heading-upper text-primary mb-3">you are lazy, its not our responsibility</span>
                 <span class="site-heading-lower">Business Casual</span>
             </h1>
         </header>
